--- a/get_post/index.html
+++ b/get_post/index.html
@@ -8,7 +8,7 @@
         <title>1851120020 - Nguyễn Khắc Khánh</title>
     </head>
     <body>
-        <form action="./post.php" method="POST">
+        <form action="./get.php">
             <div class="form_group">
                 <label for="name">Tên:</label>
                 <input type="text" name="name" id="name" placeholder="Tên" value="Nguyễn Khắc Khánh" />
